--- a/ProjetoTrilhaWeb/src/main/webapp/css/admin.css
+++ b/ProjetoTrilhaWeb/src/main/webapp/css/admin.css
@@ -22,6 +22,13 @@ header{
 }
 header img{
 	float: left;
+	height: 100px;
+	width: 100px;
+	margin: 10px;
+}
+
+header h1{
+	float: left;
 	margin: 30px 0 15px 30px;
 	font-size: 40px;
 	color: #ffffff; 
@@ -51,4 +58,32 @@ nav .opcao{
 }
 nav .opcao:hover{
 	background-color: #83afd3;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+/* Conteúdo dropdown (oculto por padrão) */
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #005f89;
+	z-index: 1;
+	width: 100%;
+}
+/* Links dentro do dropdown */
+.dropdown-content a {
+	display: block;
+}
+
+/* Mudar cor dos links dropdown ao passar mouse */
+.dropdown-content a:hover {
+	background-color: #83afd3;
+}
+
+/* Mostrar o menu dropdown menu ao passar mouse */
+.dropdown:hover .dropdown-content {
+	display: block;
 }
