--- a/ProjetoTrilhaWeb/src/main/webapp/css/admin.css
+++ b/ProjetoTrilhaWeb/src/main/webapp/css/admin.css
@@ -1,3 +1,4 @@
+
 @charset "UTF-8";
 
 /* Configuração geral do corpo da página */
@@ -87,3 +88,21 @@ nav .opcao:hover{
 .dropdown:hover .dropdown-content {
 	display: block;
 }
+
+/*****     Seção     *****/
+section{
+	clear: both;
+	min-height: 460px;
+	width: 100%;
+	margin-top:0px;
+}
+
+/*****     Rodapé     *****/
+footer{
+	background-color: #005f89;
+	color: #fff;
+	text-align:center;
+	padding: 10px;
+}
+
+
